# keelim-maestro

./: .gitignore  .gitmodules  AGENTS.md  README.md  debug-log.json  package.json
.reports/: codemap-diff.txt
docs/: all-web-ui-review-checklist.md
docs/CODEMAPS/: README.md  SCRIPTS.md  SUBMODULES.md  WORKSPACE.md  architecture.md  backend.md  data.md  dependencies.md  frontend.md  keelim-maestro.md
docs/CODEMAPS/projects/: Keelim-Knowledge-Vault.md  README.md  all-web-ui.md  all.md  android-support.md  keelim-plugin.md  keelim-vercel.md  rich.md  toto.md
docs/design/: design-system.md
docs/knowledge/: README.md  config.yaml  docker-compose.yaml  merge-guidance.md  operator-runbook.md  review-checklist.md  schema.yaml  source-targets.md  verification-contract.md
docs/tools/: README.md  pyproject.toml
docs/tools/src/keelim_knowledge/: __init__.py  cli.py  models.py
docs/tools/src/keelim_knowledge/analyzers/: __init__.py  kotlin_analyzer.py  python_analyzer.py  typescript_analyzer.py
docs/tools/src/keelim_knowledge/graph/: loader.py  neo4j_client.py  populate.py  validator.py
docs/tools/src/keelim_knowledge/mcp/: __init__.py  server.py  tools.py
docs/tools/tests/: test_analyzers.py  test_cli.py  test_loader_validator.py
docs/videos/: README.md
idea/: Keelim-Knowledge-Vault.md  all-web-ui.md  all.md  android-support.md  future.md  index.md  keelim-plugin.md  keelim-vercel.md  quant.md  rich.md  toto.md
scripts/: all-web-ui-rich-allowed-drift.txt  test-workspace.sh  update-subrepos.sh  verify-all-web-ui-integration.sh  verify-keelim-plugin-rename.sh
(+19 files in other folders)
